--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Who Am I</title>
+    <link rel="stylesheet" href="style.css">
+    
+    <style>
+        h1 {
+            color: darkblue;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <h1>Who Am I</h1>
+    
+    <p style="color: green; font-weight: bold;">My name is Noor Ezzaty Shahira Binti Azizi.</p>
+    <p>I am 22 years old.</p>
+    <p>I studied New Media Communication at Universiti Malaysia Perlis.</p>
+</body>
+</html>
